editing Set now redirects to editing Matches if indicated on the form, depending on how many matches are in the set.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,11 @@
 
   <h3>Recent Updates</h3>
 
+  <h4> July 2, 2015 </h4>
+  <ul>
+    <li> editing Set now redirects to editing Matches if indicated on the form, depending on how many matches are in the set. </li>
+  </ul>
+
   <h4> July 1, 2015 </h4>
   <ul>
     <li> ./make_same_user in models transfers Set data from one User to another and deletes the transferrer, essentially merging Users. /user (profile) now displays overall Set stats </li>
