implemented bootstrap templating to the templates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
   <h4> July 2, 2015 </h4>
   <ul>
     <li> editing Set now redirects to editing Matches if indicated on the form, depending on how many matches are in the set. </li>
+    <li> implemented bootstrap templating to the templates</li>
   </ul>
 
   <h4> July 1, 2015 </h4>
