--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -2,7 +2,7 @@
 <div class="row"><h5><b>
 	<div class="col-md-2">
 		{% if set.tournament %} 
-			<a href="{{url_for("tournament", tournament=set.tournament)}}">{{ set.tournament }}</a> - 
+			<a href="{{url_for("tournament", tournament=set.tournament)}}">{{ set.tournament }}</a>
 		{% else %}
 			Non-Tourney 
 		{% endif %}
