--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -3,6 +3,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
   <h1>View Head to Head Set History Between Two Players</h1>
   <form action="" method="post" name="head_to_head">
     {{ form.hidden_tag() }} <!-- this template argument will get replaced with hidden field that enables CSRF prevention in config. -->
@@ -10,48 +11,60 @@
     Enter the first player's tag: {{ form.user1(size=30) }} <br>
     <br>
     Enter the second player's tag: {{ form.user2(size=30) }} <br>
+    <br>
 
     {% for error in form.user1.errors or form.user2.errors %}
       <span style="color: red;">[{{error}}]</span>
-    {% endfor %}<br>
+    {% endfor %}
 
-    <p><input type="submit" value="Look up Head to Head"></p><br>
+    <!-- Customized button input -->
+    <p><input class="btn btn-primary btn-md" type="submit" value="Look up Head to Head"></p>
+    <br>
 
     {% if tag1 != None and tag2 != None %} 
-      <h2>Head to Head between {{ tag1 }} ({{ user1_set_win_count }} - {{ user2_set_win_count }}) {{ tag2 }}</h2>
-
+      <h2>Head-to-Head between {{ tag1 }} and {{ tag2 }}</h2>
       <h3> Stats </h3>
-      <table>
-        <tr>
-          <td><b>Total Sets Played: {{ user1_set_win_count + user2_set_win_count }}</b></td>
-          <td>{{ tag1 }} [{{ user1_set_win_count }}-{{ user2_set_win_count }}] vs {{ tag2 }}</td>
-        </tr>
-        <tr>
-          <td><b>Total Matches Played: {{ h2h_matches_played|length }}</b></td>
-          <td>{{ tag1 }} [{{ user1_match_win_count }}-{{ user2_match_win_count }}] vs {{ tag2 }}</td>
-        </tr>
-        <tr>
-          <td><b>Stage Record: </b></td>
-          <td>Battlefield: {{ h2h_stages_played["Battlefield"]|length }}</td>
-          <td>Dream Land: {{ h2h_stages_played["Dreamland"]|length }}</td>
-          <td>Final Destination: {{ h2h_stages_played["Final Destination"]|length }}</td>
-          <td>Fountain of Dreams: {{ h2h_stages_played["Fountain of Dreams"]|length }}</td>
-          <td>Pokemon Stadium: {{ h2h_stages_played["Pokemon Stadium"]|length }}</td>
-          <td>Yoshi's Story: {{ h2h_stages_played["Yoshi's Story"]|length }}</td>
-        </tr>
-        <tr>
-          <td><b>Character Record: </b></td>
-        </tr>
-      <table>
+        <div class="row">
+          <div class="col-md-2"> 
+          <div><b>Total Sets Played: {{ user1_set_win_count + user2_set_win_count }}</b></div>
+          <div>{{ tag1 }} [{{ user1_set_win_count }}-{{ user2_set_win_count }}] vs {{ tag2 }}</div>
+          </div>
 
-      <h2> Set History </h2>
+          <div class="col-md-2">
+          <div><b>Total Matches Played: {{ h2h_matches_played|length }}</b></div>
+          <div>{{ tag1 }} [{{ user1_match_win_count }}-{{ user2_match_win_count }}] vs {{ tag2 }}</div>
+          </div>
+          
+          <div class="col-md-2">
+          <div><b>Stage Record: </b></div>
+          <div>Battlefield: {{ h2h_stages_played["Battlefield"]|length }}</div>
+          <div>Dream Land: {{ h2h_stages_played["Dreamland"]|length }}</div>
+          <div>Final Destination: {{ h2h_stages_played["Final Destination"]|length }}</div>
+          <div>Fountain of Dreams: {{ h2h_stages_played["Fountain of Dreams"]|length }}</div>
+          <div>Pokemon Stadium: {{ h2h_stages_played["Pokemon Stadium"]|length }}</div>
+          <div>Yoshi's Story: {{ h2h_stages_played["Yoshi's Story"]|length }}</div>
+          </div>
+        </div>
 
+
+      <h3> Set History </h3>
+      <!-- "Table" column names -->
+      <div class="row">
+        <div class="col-md-2">
+          <h4>Tournament</h4>
+        </div>
+
+        <div class="col-md-2">
+          <h4>Result</h4>
+        </div>
+      </div>
+      
       <!-- If variable set is empty, Jinja2 defaults to printing empy string; this is the case when viewing the form without having selected a head to head matchup -->
       {% for set in h2h_sets_played %}
   	    {% include 'set.html' %}
       {% endfor %}
-      
     {% endif %}
-</form>
 
+  </form>
+</div>
 {% endblock %}
