added page /browse_tournaments to display list of tournaments routing to their display pages /tournament

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,11 @@
 
   <h3>Recent Updates</h3>
 
+  <h5> July 3, 2015 </h5>
+  <ul>
+    <li> added page /browse_tournaments to display list of tournaments routing to their display pages /tournament </li>
+  </ul>
+
   <h5> July 2, 2015 </h5>
   <ul>
     <li> editing Set now redirects to editing Matches if indicated on the form, depending on how many matches are in the set. </li>
@@ -25,6 +30,7 @@
   <ul>
     <li> ./make_same_user in models transfers Set data from one User to another and deletes the transferrer, essentially merging Users. /user (profile) now displays overall Set stats </li>
   </ul>
+
   <h5> June 30, 2015 </h5>
   <ul>
     <li> modified invalidScore in Set model and views.py to let special set score of (1-0) pass </li>
