updated display page for /tournament, and linked /browse_tournaments from /index'

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
     <!-- header linking to different web features, across all pages on site -->
     <div>Matchstats:
       <a href="{{ url_for('index') }}">Home</a>
-      | <a href="{{ url_for('browse_sets') }}">Browse Sets</a>
+      | <a href="{{ url_for('browse_tournaments') }}">Browse Tournaments</a>
       | <a href="{{ url_for('browse_users') }}">Browse Users</a>
       | <a href="{{ url_for('browse_regions') }}">Browse Regions</a>
       | <a href="{{ url_for('browse_characters') }}">Browse Characters</a>
