--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,7 @@
   <BR>&nbsp;<BR>
 
 
-  <h2>Recent Tournaments</h2>
-  <div><a href="{{ url_for("tournament", tournament="Apex 2015")}}">Apex 2015</a></div>
+  <div><h3><a href="{{url_for("browse_tournaments")}}">Browse Recent Tournaments</a></h3></div>
   <BR>&nbsp;<BR>
 
   <h3>Recent Updates</h3>
@@ -16,6 +15,7 @@
   <h5> July 3, 2015 </h5>
   <ul>
     <li> added page /browse_tournaments to display list of tournaments routing to their display pages /tournament </li>
+    <li> updated display page for /tournament, and linked /browse_tournaments from /index </li>
   </ul>
 
   <h5> July 2, 2015 </h5>
