Styled head to head

--- a/app/templates/browse_sets.html
+++ b/app/templates/browse_sets.html
@@ -5,11 +5,11 @@
 
   <!-- "Table" column names -->
   <div class="row">
-  	<div class="col-md-2">
+  	<div class="col-md-4">
   		<h4>Tournament</h4>
   	</div>
 
-  	<div class="col-md-2">
+  	<div class="col-md-4 text-center">
   		<h4>Contestants</h4>
   	</div>
   </div>
