--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -4,38 +4,49 @@
 
 {% block content %}
 <div class="container">
-  <h1>View Head to Head Set History Between Two Players</h1>
+        <!--<h1>View Head to Head Set History Between Two Players</h1>-->
   <form action="" method="post" name="head_to_head">
     {{ form.hidden_tag() }} <!-- this template argument will get replaced with hidden field that enables CSRF prevention in config. -->
+    <div class="row"> 
+            <div class="col-md-6">
+                    <h3 class="text-left">Player 1</h3>
+            </div>
+            <div class="col-md-6">
+                    <h3 class="text-right">Player 2</h3>
+            </div>
+    </div>
+    <div class="row"> 
+            <div class="col-md-6">
+                    <p class="text-left">{{ form.user1(size=30) }}</p>
 
-    Enter the first player's tag: {{ form.user1(size=30) }} <br>
-    <br>
-    Enter the second player's tag: {{ form.user2(size=30) }} <br>
-    <br>
-
+            </div>
+            <div class="col-md-6">
+                    <p class="text-right">{{ form.user2(size=30) }}</p>
+            </div>
+    </div>
     {% for error in form.user1.errors or form.user2.errors %}
       <span style="color: red;">[{{error}}]</span>
     {% endfor %}
 
     <!-- Customized button input -->
-    <p><input class="btn btn-primary btn-md" type="submit" value="Look up Head to Head"></p>
+    <p class="text-center"><input class="btn btn-primary btn-md" type="submit" value="Look up Head to Head"></p>
     <br>
 
     {% if tag1 != None and tag2 != None %} 
-      <h2>Head-to-Head between {{ tag1 }} and {{ tag2 }}</h2>
+    <!--<h2>Head-to-Head between {{ tag1 }} and {{ tag2 }}</h2>-->
       <h3> Stats </h3>
         <div class="row">
-          <div class="col-md-2"> 
+          <div class="col-md-4"> 
           <div><b>Total Sets Played: {{ user1_set_win_count + user2_set_win_count }}</b></div>
           <div>{{ tag1 }} [{{ user1_set_win_count }}-{{ user2_set_win_count }}] vs {{ tag2 }}</div>
           </div>
 
-          <div class="col-md-2">
+          <div class="col-md-4 text-center">
           <div><b>Total Matches Played: {{ h2h_matches_played|length }}</b></div>
           <div>{{ tag1 }} [{{ user1_match_win_count }}-{{ user2_match_win_count }}] vs {{ tag2 }}</div>
           </div>
           
-          <div class="col-md-2">
+          <div class="col-md-4 text-right">
           <div><b>Stage Record: </b></div>
           <div>Battlefield: {{ h2h_stages_played["Battlefield"]|length }}</div>
           <div>Dream Land: {{ h2h_stages_played["Dreamland"]|length }}</div>
@@ -50,11 +61,11 @@
       <h3> Set History </h3>
       <!-- "Table" column names -->
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-4">
           <h4>Tournament</h4>
         </div>
 
-        <div class="col-md-2">
+        <div class="col-md-4 text-center">
           <h4>Result</h4>
         </div>
       </div>
