added footer to /base to appear in all templates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
   <ul>
     <li> added page /browse_tournaments to display list of tournaments routing to their display pages /tournament </li>
     <li> updated display page for /tournament, and linked /browse_tournaments from /index </li>
+    <li> added footer to /base to appear in all templates </li>
   </ul>
 
   <h5> July 2, 2015 </h5>
@@ -169,9 +170,6 @@
     <li> updated 'index.html' to display updates and recent tournaments</li>
     <li> filled database with results from Apex 2015 Top 8</li>
   <ul>
-
-<hr>
-<div><b>Current database version: 38</b></div>
 
 </div>
 {% endblock %}
