--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,8 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+<link rel="stylesheet" href="{{ url_for('static', filename='startbootstrap-heroic-features-1.0.3/css/heroic-features.css') }}">
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
