--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
     <li> added page /browse_tournaments to display list of tournaments routing to their display pages /tournament </li>
     <li> updated display page for /tournament, and linked /browse_tournaments from /index </li>
     <li> added footer to /base to appear in all templates </li>
+    <li> added search function for Users into nav bar </li>
   </ul>
 
   <h5> July 2, 2015 </h5>
