search function will also automatically search tournaments by name

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,8 @@
     <li> updated display page for /tournament, and linked /browse_tournaments from /index </li>
     <li> added footer to /base to appear in all templates </li>
     <li> added search function for Users into nav bar </li>
-    <li> 
+    <li> styled search function in nav bar </li>
+    <li> search function will also automatically search tournaments by name </li>
   </ul></div></div>
   </div>
 
