--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -2,8 +2,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Search results for "{{ query }}":</h1>
-  {% for user in results %}
-      {% include 'user_display.html' %}
+  <h3>User results for "{{ query }}":</h3>
+  {% for user in user_results %}
+    {% include 'user_display.html' %}
   {% endfor %}
+
+  <h3>Tournament results for " {{query }}":</h3>
+  {% for tournament in tournament_results %}
+  	<a href="{{url_for('tournament', tournament=tournament)}}">{{ tournament }}</a>
+  {% endfor %}
+
 {% endblock %}
