--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container">
-  <header class="jumbotron hero-spacer">
+  <header class="jumbotron">
   <h1>Welcome to Matchstats!</h1>
   <div><h3><a href="{{url_for("browse_tournaments")}}">Browse Recent Tournaments</a></h3></div>
   </header>
