--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -1,27 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
+  <div class="panel panel-default">
+  <div class="panel-heading">
   <h1> Sets from {{ tournament }} </h1>
-  <br>
+  </div>
+  <div class="panel-body">
   {% if tournament_setlist|length < 1 %}
   	There were no sets found for this tournament.
   {% else %}
   	<!-- "Table" Column Titles -->
-  	<div class="row">
-  		<div class="col-md-2">
-  			<h4>Tournament</h4>
-  		</div>
+        <table class="table bootstrap-datatable">
+        <thead>
+          <tr>
+            <th><h4>Results</h4></th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+  	<tbody>
+          <!-- display all Set in tournament -->
+          {% for set in tournament_setlist %}
+          {% include 'set.html' %}
+          {% endfor %}
+  	<tbody>
+        </table>
 
-  		<div class="col-md-4">
-  			<h4>Contestants</h4>
-  		</div>
-  	</div>
-
-  	<!-- display all Set in tournament -->
-  	{% for set in tournament_setlist %}
-    	{% include 'set.html' %}
-  	{% endfor %}
   {% endif %}
+  </div>
 
  </div>
 {% endblock %}
